--- a/ecosystem.config.js.example
+++ b/ecosystem.config.js.example
@@ -11,7 +11,8 @@ module.exports = {
         ANDROID_SERVICE_ID: "",
         IOS_SERVICE_ID: "",
         PORT: 3000,
-        REDIRECT_URI: "https://xyz.wcaleniewolny.me/login/callback"
+        REDIRECT_URI: "https://xyz.wcaleniewolny.me/login/callback",
+        BASE_REDIRECT_URL: "capgo-demo-app://path"
       }
     }
   ]
